--- a/settings.ini
+++ b/settings.ini
@@ -7,11 +7,11 @@ lib_name = nbdev_tutorial
 # company_name = nike
 
 user = daxiongshu
-# description = A description of your project
-# keywords = some keywords
+description = Learn nbdev
+keywords = learn
 author = jiwei
 author_email = aixueer4ever@gmail.com
-# copyright = Put your copyright information here
+copyright = None 
 branch = master
 version = 0.0.1
 min_python = 3.6
